deployment-strategies/Canary/react-canary-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-insi-m2-canary
  namespace: default
  labels:
    app: react
    version: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react
      version: canary
  template:
    metadata:
      labels:
        app: react
        version: canary
    spec:
      imagePullSecrets:
      - name: gitlab-registry-secret
      containers:
      - name: react
        image: registry.gitlab.com/projet_insi/app-testcluster/reactapp:canary-react
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "32Mi"
            cpu: "25m"
          limits:
            memory: "64Mi"
            cpu: "50m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
