deployment-strategies/Canary/react-canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-canary-service
  namespace: default
  labels:
    app: react
    version: canary
spec:
  selector:
    app: react
    version: canary
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
