deployment-strategies/Canary/react-canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-canary-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - app.insim2.local
    secretName: insi-tls
  rules:
  - host: app.insim2.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-canary-service
            port:
              number: 80
